# QtQuickSessions

2-2QmlDatatypesDemo/: CMakeLists.txt  Main.qml  main.cpp
2-3QtQuick_PropertyBindingInQml/: CMakeLists.txt  Main.qml  main.cpp
2-4QtQuick_QtGlobalOject/: CMakeLists.txt  Main.qml  main.cpp
2-5QtQuick_QMLPropertiesAndHandlers/: CMakeLists.txt  Main.qml  main.cpp
RectangleApp/: CMakeLists.txt  Main.qml  main.cpp
